# sm-rust

./: .gitmodules  Cargo.toml  LICENSE  README.md
src/: assert.rs  attest.rs  build.rs  cpu.rs  crypto.rs  def.rs  enclave.rs  error_code.rs  ipi.rs  main.rs  mprv.rs  opensbi.rs  page.rs  platform.rs  pmp.rs  sbi_trap.rs  sbi_trap_hack.rs  sm.rs  sm_sbi.rs  thread.rs  trap.S
src/crypt/: hkdf_sha3.rs  hmac_sha3.rs  mod.rs  sha3.rs
src/crypt/ed25519/: fe.rs  ge.rs  mod.rs  precomp_data.rs  sc.rs  tmp.rs
